include/hs_uv.h

////////////////////////////////////////////////////////////////////////////////
// CONSTANT
#define INIT_LOOP_SIZE 128
#define SO_REUSEPORT_LOAD_BALANCE 1
#define SO_REUSEPORT_LOAD_BALANCE 0
// this function will be a noop when SO_REUSEPORT_LOAD_BALANCE == 0
int hs_set_socket_reuse(uv_stream_t* server);
////////////////////////////////////////////////////////////////////////////////
// loop
//
// the memory pool item struct, we use the largest possible value,
// except uv_getnameinfo_t, which is too large than average :(
// anyway we don't do getaddrinfo or getaddrname in libuv's thread pool
//
// following size data is from libuv v1.12, in bytes
//                     win  unix
// uv_timer_t        : 160  152
// uv_prepare_t      : 120  120
// uv_check_t        : 120  120
// uv_idle_t         : 120  120
// uv_async_t        : 224  128
// uv_poll_t         : 416  160
// uv_signal_t       : 264  152
// uv_process_t      : 264  136
// uv_tcp_t          : 320  248
// uv_pipe_t         : 576  264
// uv_tty_t          : 344  312
// uv_udp_t          : 424  216
// uv_fs_event_t     : 272  136
// uv_fs_poll_t      : 104  104
// uv_req_t          : 112  64
// uv_getaddrinfo_t  : 216  160
// uv_getnameinfo_t  : 1368 1320  !too large
// uv_shutdown_t     : 128  80
// uv_write_t        : 176  192
// uv_connect_t      : 128  96
// uv_udp_send_t     : 128  320
// uv_fs_t           : 456  440
// uv_work_t         : 176  128
// uv_random_t       : 144  144
typedef union {
    uv_timer_t          timer_t      ;
    uv_prepare_t        prepare_t    ;
    uv_check_t          check_t      ;
    uv_idle_t           idle_t       ;
    uv_async_t          async_t      ;
    uv_poll_t           poll_t       ;
    uv_signal_t         signal_t     ;
    uv_process_t        process_t    ;
    uv_tcp_t            tcp_t        ;
    uv_pipe_t           pipe_t       ;
    uv_tty_t            tty_t        ;
    uv_udp_t            udp_t        ;
    uv_fs_event_t       fs_event_t   ;
    uv_fs_poll_t        fs_poll_t    ;
    uv_req_t            req_t        ;
//    uv_getaddrinfo_t    getaddrinfo_t;
//    uv_getnameinfo_t    getnameinfo_t; !too large
    uv_shutdown_t       shutdown_t   ;
    uv_write_t          write_t      ;
    uv_connect_t        connect_t    ;
    uv_udp_send_t       udp_send_t   ;
    uv_fs_t             fs_t         ;
    uv_work_t           work_t       ;
    uv_random_t         random_t     ;
} hs_uv_struct;
typedef struct {
    // following two fields record events during uv_run, inside callback which
    // wants to record a event, push the handler's slot into the queue
    HsInt   event_counter;
    HsInt*  event_queue;
    // following two fields provide buffers allocated in haskell to uv_alloc_cb,
    // the buffer_size_table are also used to record operation's result
    char**  buffer_table;
    HsInt*  buffer_size_table;
    // following fields are used to implemented a stable slot allocator
    // see note below
    HsInt*  slot_table;
    HsInt   free_slot;
    HsInt*  free_slot_queue;
    HsInt   free_slot_counter;
    // uv_struct_table field is a memory pool for uv_handle_t / uv_req_t struct,
    // see note below
    hs_uv_struct**  uv_struct_table;
    HsInt   size;
    size_t  resize;
    // following fields are handlers used to wake up event loop under threaded and
    // non-threaded RTS respectively.
    uv_async_t* async;
    uv_timer_t* timer;
} hs_loop_data;
// Note: the slot allocator
//
// we used to do slot allocation in haskell, but doing it in C allow us to free slot
// in the right place, e.g. uv_close_cb. The allocator use the same algorithm with
// ghc's stable pointer table. When initialized, it's looked like:
//
//  slot_table->[0][1][2][3]...[INIT_LOOP_SIZE-1]
//               |  |  |  |
//              =1 =2 =3 =4 ...
//  free_slot = 0
//
// Every time we allocate a slot, we return current free_slot, and set the free_slot to
// slot_table[free_slot], so after 3 allocation, it's looked like
//
//  slot_table->[0][1][2][3]...[INIT_LOOP_SIZE-1]
//               |  |  |  |
//              =1 =2 =3 =4 ...
//  free_slot = 3
//
// When we free slot x, we set slot_table[x] to current free_slot, and free_slot
// to x. Now let's say we return slot 1, it will be looked like
//
//  slot_table->[0][1][2][3]...[INIT_LOOP_SIZE-1]
//               |  |  |  |
//              =1 =3 =3 =4 ...
//  free_slot = 1
//
// Next time allocation will give 1 back to us, and free_slot will continue point to 3.
//
// But in practice, we never directly return a free slot back to slot_table, because
// the haskell thread allocating slot may be paused by RTS before its takeMVar parking its
// TSO since parking itself need an allocation. Now if uv_run fired its callback and 
// free the slot, next registration will got the same slot, and mess up with previous
// haskell thread. In order to solve this race condition, we free a slot in two steps:
//
// 1. free_slot will first push slot to free_slot_queue, and increase free_slot_counter.
// 2. before uv_run we loop through this queue and put these free slots back to slot_table.
//
// With this scheme, slots will be held one scheduler loop longer, thus ensure the haskell
// thread can successfully wait on its 'MVar', and in turn make sure it will be resumed.
//
////////////////////////////////////////////////////////////////////////////////
//
// Note: uv_handle_t/uv_req_t memory pool
//
// The reasons to use a memory pool for uv structs are:
//
// 1. A malloc/free per request is inefficient.
// 2. It's diffcult to manange if we use haskell heap(pinned).
// 3. uv structs are small mostly.
//
// The memory pool is grow on demand, when initialized, it's looked like:
//
// uv_struct_table [0]
//                  |
//                  V
//      struct_block[INIT_LOOP_SIZE]
//
// After several loop data resize, it will be looked like:
//
// uv_struct_table [0]                [1]                [2] ...
//                  |                  |                  |
//                  V                  |                  |
//      struct_block[INIT_LOOP_SIZE]   V                  |
//                        struct_block[INIT_LOOP_SIZE]    V
//                                            struct_block[INIT_LOOP_SIZE*2]
//                                                                            .
//                                                                            .
//                                                                            .
// That is, we keep the total number of items sync with loop->data->size, while
// not touching previously allocated blocks, so that the structs are never moved.
//
// Check fetch_uv_struct below to see how do we get struct's address by slot.

uv_loop_t* hs_uv_loop_init(HsInt siz);
void hs_uv_loop_close(uv_loop_t* loop);
int hs_uv_run(uv_loop_t* loop, uv_run_mode mode);
////////////////////////////////////////////////////////////////////////////////
// wake up
int hs_uv_wake_up_timer(hs_loop_data* loop_data);
int hs_uv_wake_up_async(hs_loop_data* loop_data);
////////////////////////////////////////////////////////////////////////////////
// handle
uv_handle_t* hs_uv_handle_alloc(uv_loop_t* loop);
void hs_uv_handle_free(uv_handle_t* handle);
void hs_uv_handle_close(uv_handle_t* handle);
////////////////////////////////////////////////////////////////////////////////
// request
void hs_uv_cancel(uv_loop_t* loop, HsInt slot);
////////////////////////////////////////////////////////////////////////////////
// stream
int hs_uv_listen(uv_stream_t* stream, int backlog);
void hs_uv_listen_resume(uv_stream_t* server);
int hs_uv_read_start(uv_stream_t* handle);
HsInt hs_uv_write(uv_stream_t* handle, char* buf, HsInt buf_size);
uv_check_t* hs_uv_accept_check_alloc(uv_stream_t* server);
int hs_uv_accept_check_init(uv_check_t* check);
void hs_uv_accept_check_close(uv_check_t* check);
////////////////////////////////////////////////////////////////////////////////
// tcp and pipe
int hs_uv_tcp_open(uv_tcp_t* handle, int32_t sock);
HsInt hs_uv_tcp_connect(uv_tcp_t* handle, const struct sockaddr* addr);
int hs_uv_pipe_open(uv_pipe_t* handle, int32_t sock);
HsInt hs_uv_pipe_connect(uv_pipe_t* handle, const char* name);
////////////////////////////////////////////////////////////////////////////////
// udp

int hs_uv_udp_recv_start(uv_udp_t* handle);
HsInt hs_uv_udp_send_connected(uv_udp_t* handle, char* buf, HsInt buf_siz);
uv_check_t* hs_uv_udp_check_alloc(uv_udp_t* server);
int hs_uv_udp_check_init(uv_check_t* check);
void hs_uv_udp_check_close(uv_check_t* check);